deploy/k3s/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2
          args: ["start", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm
              mountPath: /opt/keycloak/data/import/realm-lab.json
              subPath: realm-lab.json
      volumes:
        - name: realm
          configMap:
            name: keycloak-realm
